--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
 	<main>
 		<section id="background">
 			<h2>Reflection on Proposal</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione eveniet cupiditate cumque autem, ad dolores a iure cum ipsa. Facere dolorum dolor exercitationem quae recusandae quam expedita fugit est error! </h3>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione eveniet cupiditate cumque autem, ad dolores a iure cum ipsa. Facere dolorum dolor exercitationem quae recusandae quam expedita fugit est error! </p>
+      <h2> Hello World! </h2>
     </section>
 	</main>
 
