Linked to proposal link

--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
 		<section id="background">
 			<h2>Reflection on Proposal</h2>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione eveniet cupiditate cumque autem, ad dolores a iure cum ipsa. Facere dolorum dolor exercitationem quae recusandae quam expedita fugit est error! </h3>
+      <h2> Link to proposal link </h2>
+      <a href = "proposal.html"> Proposal Link </a>
     </section>
 	</main>
 
