--- a/proposal.html
+++ b/proposal.html
@@ -12,28 +12,11 @@
 	<!-- NAVIGATION: Add your own list item links based on secion IDs and heading elements -->
 	<nav>
 		<ul>
-      <li><a href="#background">Background Research</a></li>
-      <ul> 
-        <li><a href = "#Description"> Organisation Description </a> </li>
-        <li><a href = "#Key Info"> Key Information </a></li> 
-        <li> <a href = "#User Justification"> User Research </a> </li> 
-        <li><a href="#profiles">User Profiles</a></li>
-        <li><a href = "#Target User"> Target Audience </a> </li> 
-        <li><a href = "#The Concept"> The Concept </a></li> 
-      </ul>
-			<li><a href="#ideation">Ideation</a></li>
-			<ul>
-				<li><a href="#moodboards">Mood Boards</a></li>
-        <li><a href ="#sitemaps">Sitemaps</a></li>
-				<li><a href="#sketches">Sketches</a></li>
-			</ul>
-			<li><a href="#designs">Designs</a></li>
-			<ul>
-				<li><a href="#wireframes">Wireframes</a></li>
-				<li><a href="#mockups">Mockups</a></li>
-			</ul>
-			<li><a href="#references">References</a></li>
-		</ul>
+      <li><a href="#Home">Home</a></li>
+      <li><a href = "#Our Impact"> Our Impact </a> </li>
+      <li><a href = "#Your Impact"> Your Impact </a></li> 
+      <li> <a href = "#Donate Now"> Donate Now </a> </li> 
+    </ul>
 	</nav>
 
 	<!-- MAIN CONTENT: Add your own sections as needed -->
