--- a/proposal.html
+++ b/proposal.html
@@ -19,6 +19,19 @@
     </ul>
 	</nav>
 
+  <div id = "section1">
+  <h1> Home Section </h1>
+  </div>
+  <div id = "section2">
+  <h1> Our Impact</h1>
+  </div>
+  <div id = "section3">
+  <h1> Your Impact </h1>
+  </div>
+  <div id = "section1">
+  <h1> Donate Now </h1>
+  </div>
+
 	<!-- MAIN CONTENT: Add your own sections as needed -->
 </body>
 
