--- a/proposal.html
+++ b/proposal.html
@@ -19,16 +19,16 @@
     </ul>
 	</nav>
 
-  <div id = "section1">
+  <div id = "Home">
   <h1> Home Section </h1>
   </div>
-  <div id = "section2">
+  <div id = "Our Impact">
   <h1> Our Impact</h1>
   </div>
-  <div id = "section3">
+  <div id = "Your Impact">
   <h1> Your Impact </h1>
   </div>
-  <div id = "section1">
+  <div id = "Donate Now">
   <h1> Donate Now </h1>
   </div>
 
