Home page layout somewhat made

--- a/proposal.html
+++ b/proposal.html
@@ -10,29 +10,33 @@
 <body>
 
 	<!-- NAVIGATION: Add your own list item links based on secion IDs and heading elements -->
-	<nav>
+<nav class = "navbar">
+    <img class ="logo" src = "World Logo.png"> 
 		<ul>
-      <li><a href="#Home">Home</a></li>
-      <li><a href = "#Our Impact"> Our Impact </a> </li>
-      <li><a href = "#Your Impact"> Your Impact </a></li> 
-      <li> <a href = "#Donate Now"> Donate Now </a> </li> 
+      <li id = "Home_Attribute"><a href="#Home">Home</a></li>
+      <li><a href = "#Our_Impact"> Our Impact </a> </li>
+      <li><a href = "#Your_Impact"> Your Impact </a></li> 
+      <li> <a href = "#Donate_Now"> <button> Donate Now </button> </a> </li> 
     </ul>
-	</nav>
+</nav>
+
 
   <div id = "Home">
-  <h1> Home Section </h1>
+  <p id = "Home_Text"> "We're committed to overcoming poverty, injustice and vulnerability in children - aiming to achieve everlasting change" </p>
   </div>
-  <div id = "Our Impact">
+  <div id = "Our_Impact">
   <h1> Our Impact</h1>
   </div>
-  <div id = "Your Impact">
+  <div id = "Your_Impact">
   <h1> Your Impact </h1>
   </div>
-  <div id = "Donate Now">
-  <h1> Donate Now </h1>
+  <div id = "Donate_Now">
+  <h1 id = "Donate_Now_Text"> Donate Now </h1>
   </div>
+
 
 	<!-- MAIN CONTENT: Add your own sections as needed -->
 </body>
+
 
 </html>
