Better home page

--- a/proposal.html
+++ b/proposal.html
@@ -11,6 +11,7 @@
 
 	<!-- NAVIGATION: Add your own list item links based on secion IDs and heading elements -->
 <nav class = "navbar">
+    <!--Way to add image logo to navbar - https://github.com/creativetimofficial/material-kit/issues/107 -->
     <img class ="logo" src = "World Logo.png"> 
 		<ul>
       <li id = "Home_Attribute"><a href="#Home">Home</a></li>
@@ -22,8 +23,13 @@
 
 
   <div id = "Home">
-  <p id = "Home_Text"> "We're committed to overcoming poverty, injustice and vulnerability in children - aiming to achieve everlasting change" </p>
+    <div class = "bottom_bar">
+     <p id = "Home_Text"> "We're committed to overcoming poverty, injustice and vulnerability in children - aiming to achieve everlasting change" </p>
+     </div>
   </div>
+
+
+
   <div id = "Our_Impact">
   <h1> Our Impact</h1>
   </div>
