--- a/proposal.html
+++ b/proposal.html
@@ -5,6 +5,9 @@
 	<meta name="viewport" content="width=device-width">
 	<title>Web Proposal</title>
 	<link href="proposalCSS.css" rel="stylesheet" type="text/css" />
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet"> 
+  
 </head>
 
 <body>
@@ -32,7 +35,13 @@
 
   <div id = "Our_Impact">
   <h1> Our Impact</h1>
-  </div>
+  <h2> Water </h2> 
+  <p> Through our work and the support from our donors, 3.4 million people were provided access with clean water around the world in 2019.</p> 
+  <h2> Income </h2>
+  <p> Throughout the year of 2019, $28.7 millions in appeals, donations and gifts were received and used by us in supporting our vision, mission and cause with your support <p>
+  <h2> Funds </h2>
+  <p> With the funds we receive, 81.7% of your donated funds are used exclusively for field programs and advocacy work - helping children and families, 11.3% is focused on fundraising and 7% goes to our administration. </p> 
+   </div>
   <div id = "Your_Impact">
   <h1> Your Impact </h1>
   </div>
