--- a/proposal.html
+++ b/proposal.html
@@ -44,6 +44,16 @@
    </div>
   <div id = "Your_Impact">
   <h1> Your Impact </h1>
+  <h2> Income </h2>
+  <p> Know that <b> YOUR </b> donation has an impact, as 72% of our funds come from the Australian community (from people like you and many others in Australia!) </p>
+  <h2> Water </h2>
+  <p> By donating, <b> YOU </b> can help us fund the construction of handwashing stations, prevent deadly infections and assist communities in using water </p>
+  <h2> Education </h2>
+  <p> With <b> YOUR </b>  support - we can ensure millions of children can have a youth full of accessible and quality education across the world </p>
+  <h2> Worldwide</h2>
+  <p> Overall by donating, <b> YOU </b> can have a beneficial and global impact to the issues of poverty and injustice that we work on across the world </p>
+
+  
   </div>
   <div id = "Donate_Now">
   <h1 id = "Donate_Now_Text"> Donate Now </h1>
