--- a/proposal.html
+++ b/proposal.html
@@ -4,6 +4,9 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
 	<title>Web Proposal</title>
+  <link rel ="shortcut icon" type = "image/png" href = "favicon.png">
+  <!--Favicon icon-->
+    
 	<link href="proposalCSS.css" rel="stylesheet" type="text/css" />
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet"> 
