--- a/proposal.html
+++ b/proposal.html
@@ -14,16 +14,18 @@
 </head>
 
 <body>
-
-	<!-- NAVIGATION: Add your own list item links based on secion IDs and heading elements -->
 <nav class = "navbar">
     <!--Way to add image logo to navbar - https://github.com/creativetimofficial/material-kit/issues/107 -->
     <img class ="logo" src = "World Logo.png"> 
 		<ul>
-      <li id = "Home_Attribute"><a href="#Home">Home</a></li>
-      <li><a href = "#Our_Impact"> Our Impact </a> </li>
-      <li><a href = "#Your_Impact"> Your Impact </a></li> 
-      <li> <a href = "#Donate_Now"> <button> Donate Now </button> </a> </li> 
+      <label for = "toggle" id = "hamburger-menu"> &#9776 </label> 
+      <input type = "checkbox" id = "toggle"/>
+      <div class = "menu">
+        <li id = "Home_Attribute"><a href="#Home">Home</a></li>
+        <li><a href = "#Our_Impact"> Our Impact </a> </li>
+        <li><a href = "#Your_Impact"> Your Impact </a></li> 
+        <li> <a href = "#Donate_Now"> <button> Donate Now </button> </a> </li>
+      </div> 
     </ul>
 </nav>
 
@@ -35,29 +37,58 @@
   </div>
 
 
-
   <div id = "Our_Impact">
-  <h1> Our Impact</h1>
-  <h2> Water </h2> 
-  <p> Through our work and the support from our donors, 3.4 million people were provided access with clean water around the world in 2019.</p> 
-  <h2> Income </h2>
-  <p> Throughout the year of 2019, $28.7 millions in appeals, donations and gifts were received and used by us in supporting our vision, mission and cause with your support <p>
-  <h2> Funds </h2>
-  <p> With the funds we receive, 81.7% of your donated funds are used exclusively for field programs and advocacy work - helping children and families, 11.3% is focused on fundraising and 7% goes to our administration. </p> 
-   </div>
-  <div id = "Your_Impact">
-  <h1> Your Impact </h1>
-  <h2> Income </h2>
-  <p> Know that <b> YOUR </b> donation has an impact, as 72% of our funds come from the Australian community (from people like you and many others in Australia!) </p>
-  <h2> Water </h2>
-  <p> By donating, <b> YOU </b> can help us fund the construction of handwashing stations, prevent deadly infections and assist communities in using water </p>
-  <h2> Education </h2>
-  <p> With <b> YOUR </b>  support - we can ensure millions of children can have a youth full of accessible and quality education across the world </p>
-  <h2> Worldwide</h2>
-  <p> Overall by donating, <b> YOU </b> can have a beneficial and global impact to the issues of poverty and injustice that we work on across the world </p>
+    <h1> Our Impact</h1>
+    
+    <section class = "Our_Impact_Text">
+        <div id = "Images_Our_Impact"> 
+          <img class ="Water" src = "Water_Our_Impact.png"> 
+          <img class ="Income" src = "Income_Our_Impact.png"> 
+          <img class ="Funds" src = "Funds_Our_Impact.png"> 
+        </div>
 
-  
+        <div id = "Overall_Our_Impact_Text">
+      
+          <div id = "Water_Our_Impact"> 
+          <h2> Water </h2> 
+          <p> Through our work and the support from our donors, 3.4 million people were provided access with clean water around the world in 2019.</p> 
+          </div> 
+
+          <div id = "Income_Our_Impact"> 
+          <h2> Income </h2>
+          <p> Throughout the year of 2019, $28.7 millions in appeals, donations and gifts were received and used by us in supporting our vision, mission and cause with your support </p>
+          </div> 
+
+          <div id = "Funds_Our_Impact"> 
+          <h2> Funds </h2>
+          <p> With the funds we receive, 81.7% of your donated funds are used exclusively for field programs and advocacy work - helping children and families, 11.3% is focused on fundraising and 7% goes to our administration. </p> 
+          </div> 
+        </div> 
+    </section>
+
+
+  <div id = "Your_Impact">
+    <h1> Your Impact </h1>
+
+    <section class = "Our_Impact_Text">
+    <div id = "Images_Our_Impact"> 
+      <img class ="Water" src = "Water_Our_Impact.png"> 
+      <img class ="Income" src = "Income_Our_Impact.png"> 
+      <img class ="Funds" src = "Funds_Our_Impact.png"> 
+    </div>
+
+    <h2> Income </h2>
+    <p> Know that <b> YOUR </b> donation has an impact, as 72% of our funds come from the Australian community (from people like you and many others in Australia!) </p>
+    <h2> Water </h2>
+    <p> By donating, <b> YOU </b> can help us fund the construction of handwashing stations, prevent deadly infections and assist communities in using water </p>
+    <h2> Education </h2>
+    <p> With <b> YOUR </b>  support - we can ensure millions of children can have a youth full of accessible and quality education across the world </p>
+    <h2> Worldwide</h2>
+    <p> Overall by donating, <b> YOU </b> can have a beneficial and global impact to the issues of poverty and injustice that we work on across the world </p>
+
+    </section> 
   </div>
+  
   <div id = "Donate_Now">
   <h1 id = "Donate_Now_Text"> Donate Now </h1>
   </div>
