Our impact display:flex

--- a/proposal.html
+++ b/proposal.html
@@ -42,9 +42,7 @@
     
     <section class = "Our_Impact_Text">
         <div id = "Images_Our_Impact"> 
-          <img class ="Water" src = "Water_Our_Impact.png"> 
-          <img class ="Income" src = "Income_Our_Impact.png"> 
-          <img class ="Funds" src = "Funds_Our_Impact.png"> 
+          <img class ="Water" src = "Our Impact Images.png"> 
         </div>
 
         <div id = "Overall_Our_Impact_Text">
@@ -71,11 +69,11 @@
     <h1> Your Impact </h1>
 
     <section class = "Our_Impact_Text">
-    <div id = "Images_Our_Impact"> 
-      <img class ="Water" src = "Water_Our_Impact.png"> 
-      <img class ="Income" src = "Income_Our_Impact.png"> 
-      <img class ="Funds" src = "Funds_Our_Impact.png"> 
+    <div id = "Images_Your_Impact"> 
+    <img class ="Images_Your_Impact" src = "Your Impact Images.png"> 
     </div>
+
+    <div id = "Overall_Your_Impact_Text">
 
     <h2> Income </h2>
     <p> Know that <b> YOUR </b> donation has an impact, as 72% of our funds come from the Australian community (from people like you and many others in Australia!) </p>
@@ -87,8 +85,10 @@
     <p> Overall by donating, <b> YOU </b> can have a beneficial and global impact to the issues of poverty and injustice that we work on across the world </p>
 
     </section> 
+
+    </div> 
   </div>
-  
+
   <div id = "Donate_Now">
   <h1 id = "Donate_Now_Text"> Donate Now </h1>
   </div>
