Got basic structure

--- a/proposal.html
+++ b/proposal.html
@@ -77,43 +77,43 @@
         <div id = "Second Row"> 
           <h2> Income </h2>
         </div> 
-        <div id = "Third Row"> 
+        <div id = "Third_Row"> 
           <p> Know that <b> YOUR </b> donation has an impact, as 72% of our funds come from the Australian community (from people like you and many others in Australia!) </p>
         </div> 
       </div> 
 
-      <div id = "Second_Column"> 
+      <div id = "First_Column"> 
         <div id = "First Row"> 
           <img class ="Images_Your_Impact" src = "Water_Icon.png"> 
         </div> 
         <div id = "Second Row"> 
           <h2> Water</h2>
         </div> 
-        <div id = "Third Row"> 
+        <div id = "Third_Row"> 
           <p> By donating, <b> YOU </b> can help us fund the construction of handwashing stations, prevent deadly infections and assist communities in using water </p>
         </div> 
       </div>
 
-      <div id = "Third_Column">
+      <div id = "First_Column">
         <div id = "First Row"> 
           <img class ="Images_Your_Impact" src = "Education_Icon.png"> 
         </div> 
         <div id = "Second Row"> 
           <h2> Education </h2>
         </div> 
-        <div id = "Third Row"> 
+        <div id = "Third_Row"> 
           <p> With <b> YOUR </b>  support - we can ensure millions of children can have a youth full of accessible and quality education across the world </p>
         </div> 
       </div> 
 
-      <div id = "Last_Column">
+      <div id = "First_Column">
         <div id = "First Row"> 
           <img class ="Images_Your_Impact" src = "Worldwide_Icon.png"> 
         </div> 
         <div id = "Second Row"> 
           <h2> Worldwide </h2>
         </div> 
-        <div id = "Third Row"> 
+        <div id = "Third_Row"> 
           <p> Overall by donating, <b> YOU </b> can have a beneficial and global impact to the issues of poverty and injustice that we work on across the world </p>
         </div> 
       </div> 
