Setting up similar process with our impact

--- a/proposal.html
+++ b/proposal.html
@@ -37,10 +37,33 @@
   </div>
 
 
-  <div id = "Our_Impact">
+  <div id = "Our_Impact"> - <!-- This is more like 3 rows with 2 columns each --> 
     <h1> Our Impact</h1>
-    
-    <section class = "Our_Impact_Text">
+    <section class = "Our_Impact_Section">
+
+       <div id = "Our_Impact_First_Column"> 
+        <div id = "Our_Impact_First_Row"> 
+          <img class ="Images_Your_Impact" src = "Income_Icon.png"> 
+        </div> 
+        <div id = "Our_Impact_Second_Row"> 
+          <h2> Income </h2>
+        </div> 
+        <div id = "Our_Impact_Third_Row"> 
+          <p> Know that <b> YOUR </b> donation has an impact, as 72% of our funds come from the Australian community (from people like you and many others in Australia!) </p>
+        </div> 
+      </div> 
+
+      <div id = "Our_Impact_First_Column"> 
+        <div id = "Our_Impact_First_Row"> 
+          <img class ="Images_Your_Impact" src = "Water_Icon.png"> 
+        </div> 
+        <div id = "Our_Impact_Second_Row"> 
+          <h2> Water</h2>
+        </div> 
+        <div id = "Our_Impact_Third_Row"> 
+          <p> By donating, <b> YOU </b> can help us fund the construction of handwashing stations, prevent deadly infections and assist communities in using water </p>
+        </div> 
+      </div>
 
         <div id = "Images_Our_Impact"> 
           <img class ="Water" src = "Our Impact Images.png"> 
