Comment outlining structure for "Our_Impact" page

--- a/proposal.html
+++ b/proposal.html
@@ -39,17 +39,18 @@
 
   <div id = "Our_Impact"> - <!-- This is more like 3 rows with 2 columns each --> 
     <h1> Our Impact</h1>
-    <section class = "Our_Impact_Section">
+    <!-- First column should just be 3 images, 2nd column should be just rest of text -->
+    <section class = "Our_Impact_Section"> 
 
        <div id = "Our_Impact_First_Column"> 
         <div id = "Our_Impact_First_Row"> 
-          <img class ="Images_Your_Impact" src = "Income_Icon.png"> 
+          <img class ="Images_Your_Impact" src = "Water.png"> 
         </div> 
         <div id = "Our_Impact_Second_Row"> 
-          <h2> Income </h2>
+          <h2> Water </h2>
         </div> 
         <div id = "Our_Impact_Third_Row"> 
-          <p> Know that <b> YOUR </b> donation has an impact, as 72% of our funds come from the Australian community (from people like you and many others in Australia!) </p>
+          <p> Through our work and the support from our donors, 3.4 million people were provided access with clean water around the world in 2019. </p>
         </div> 
       </div> 
 
@@ -58,12 +59,16 @@
           <img class ="Images_Your_Impact" src = "Water_Icon.png"> 
         </div> 
         <div id = "Our_Impact_Second_Row"> 
-          <h2> Water</h2>
+          <h2> Income </h2>
         </div> 
         <div id = "Our_Impact_Third_Row"> 
           <p> By donating, <b> YOU </b> can help us fund the construction of handwashing stations, prevent deadly infections and assist communities in using water </p>
         </div> 
       </div>
+    </div>
+    </section> 
+
+      <!-- Original Code For Our Impact 
 
         <div id = "Images_Our_Impact"> 
           <img class ="Water" src = "Our Impact Images.png"> 
@@ -87,6 +92,8 @@
           </div> 
         </div> 
     </section>
+
+    --> 
 
 
   <div id = "Your_Impact">
