Test with content alignment for our impact

--- a/proposal.html
+++ b/proposal.html
@@ -43,21 +43,24 @@
     <section class = "Our_Impact_Section"> 
 
        <div id = "Our_Impact_First_Column"> 
+         <div class = "container"> 
         <div id = "Our_Impact_First_Row"> 
           <img class ="Images_Your_Impact" src = "Water_Our_Impact.png"> 
         </div> 
+        <div class = "content">
+          <h2> Water </h2> 
+          <p> Through our work and the support from our donors, 3.4 million people were provided access with clean water around the world in 2019.</p> 
         <div id = "Our_Impact_Second_Row"> 
           <img class ="Images_Your_Impact" src = "Income_Our_Impact.png"> 
         </div> 
         <div id = "Our_Impact_Third_Row"> 
           <img class ="Images_Your_Impact" src = "Funds_Our_Impact.png"> 
         </div> 
+        </div>
       </div> 
 
       <div id = "Our_Impact_Second_Column"> 
         <div id = "Our_Impact_First_Row"> 
-          <h2> Water </h2> 
-          <p> Through our work and the support from our donors, 3.4 million people were provided access with clean water around the world in 2019.</p> 
         </div> 
         <div id = "Our_Impact_Second_Row"> 
           <h2> Income </h2>
