--- a/proposal.html
+++ b/proposal.html
@@ -43,32 +43,29 @@
     <section class = "Our_Impact_Section"> 
 
        <div id = "Our_Impact_First_Column"> 
-         <div class = "container"> 
         <div id = "Our_Impact_First_Row"> 
           <img class ="Images_Your_Impact" src = "Water_Our_Impact.png"> 
         </div> 
-        <div class = "content">
-          <h2> Water </h2> 
-          <p> Through our work and the support from our donors, 3.4 million people were provided access with clean water around the world in 2019.</p> 
         <div id = "Our_Impact_Second_Row"> 
           <img class ="Images_Your_Impact" src = "Income_Our_Impact.png"> 
         </div> 
         <div id = "Our_Impact_Third_Row"> 
           <img class ="Images_Your_Impact" src = "Funds_Our_Impact.png"> 
         </div> 
-        </div>
       </div> 
 
       <div id = "Our_Impact_Second_Column"> 
         <div id = "Our_Impact_First_Row"> 
+          <h2 class = "Our_Impact_Headings"> Water </h2> 
+          <p class = "Our_Impact_Paragraphs"> Through our work and the support from our donors, 3.4 million people were provided access with clean water around the world in 2019.</p> 
         </div> 
         <div id = "Our_Impact_Second_Row"> 
-          <h2> Income </h2>
-           <p> Throughout the year of 2019, $28.7 millions in appeals, donations and gifts were received and used by us in supporting our vision, mission and cause with your support </p>
+          <h2 class = "Our_Impact_Headings"> Income </h2>
+           <p class = "Our_Impact_Paragraphs"> Throughout the year of 2019, $28.7 millions in appeals, donations and gifts were received and used by us in supporting our vision, mission and cause with your support </p>
         </div> 
         <div id = "Our_Impact_Third_Row"> 
-          <h2> Funds </h2> 
-           <p> With the funds we receive, 81.7% of your donated funds are used exclusively for field programs and advocacy work - helping children and families, 11.3% is focused on fundraising and 7% goes to our administration. </p> 
+          <h2 class = "Our_Impact_Headings"> Funds </h2> 
+           <p class = "Our_Impact_Paragraphs"> With the funds we receive, 81.7% of your donated funds are used exclusively for field programs and advocacy work - helping children and families, 11.3% is focused on fundraising and 7% goes to our administration. </p> 
         </div> 
       </div>
     </div>
