Done for home, our impact and your impact page - need to do donation section

--- a/proposal.html
+++ b/proposal.html
@@ -31,14 +31,12 @@
 
 
   <div id = "Home">
-    <div class = "bottom_bar">
      <p id = "Home_Text"> "We're committed to overcoming poverty, injustice and vulnerability in children - aiming to achieve everlasting change" </p>
-     </div>
   </div>
 
 
-  <div id = "Our_Impact"> - <!-- This is more like 3 rows with 2 columns each --> 
-    <h1> Our Impact</h1>
+  <div id = "Our_Impact">
+    <h1 id = "Our_Impact_Title"> Our Impact</h1>
     <!-- First column should just be 3 images, 2nd column should be just rest of text -->
     <section class = "Our_Impact_Section"> 
 
@@ -100,7 +98,7 @@
 
 
   <div id = "Your_Impact">
-    <h1> Your Impact </h1>
+    <h1 id = "Your_Impact_Title"> Your Impact </h1>
 
     <section class = "Your_Impact_Section">
        <div id = "First_Column"> 
