Added extra button for continue alongside donation inspiration on right hand side

--- a/proposal.html
+++ b/proposal.html
@@ -174,8 +174,11 @@
 
   </div>
 
-  <div id = "Donate_Now">
+
+
+  <div id = "Donate_Now"> - <!--Make proper div sections for this area - ie two columns left and right-->
   <h1 id = "Donate_Now_Text"> Donate Now </h1>
+  <img class ="Donation_Inspiration" src = "Donation_Benefits.png"> 
   <h2> Select your donation amount: </h2>
 
   <div class = "Donation_Option"> 
@@ -194,8 +197,11 @@
   <div class = "Donation_Amount">
     <button class = "btn btn-top"> $25 </button> 
     <button class = "btn btn-middle"> $50 </button> 
-    <button class = "btn btn-bottom"> $100 </button> 
+    <button class = "btn btn-bottom"> $100 </button>
+    <button class = "btn-btn-continue"> Continue </button>  
   </div>
+
+
 
 
 	<!-- MAIN CONTENT: Add your own sections as needed -->
