Added extra donate page for easier coding and to make better functionality/responsiveness

--- a/proposal.html
+++ b/proposal.html
@@ -24,7 +24,7 @@
         <li id = "Home_Attribute"><a href="#Home">Home</a></li>
         <li><a href = "#Our_Impact"> Our Impact </a> </li>
         <li><a href = "#Your_Impact"> Your Impact </a></li> 
-        <li> <a href = "#Donate_Now"> <button class = "Donation_Nav"> Donate Now </button> </a> </li>
+        <li> <a href = "Donate.html"> <button class = "Donation_Nav"> Donate Now </button> </a> </li>
       </div> 
     </ul>
 </nav>
