--- a/proposal.html
+++ b/proposal.html
@@ -24,7 +24,7 @@
         <li id = "Home_Attribute"><a href="#Home">Home</a></li>
         <li><a href = "#Our_Impact"> Our Impact </a> </li>
         <li><a href = "#Your_Impact"> Your Impact </a></li> 
-        <li> <a href = "Donate.html"> <button class = "Donation_Nav"> Donate Now </button> </a> </li>
+        <li> <a href = "#Donate_Now"> <button class = "Donation_Nav"> Donate Now </button> </a> </li>
       </div> 
     </ul>
 </nav>
@@ -178,8 +178,6 @@
 
   <div id = "Donate_Now"> - <!--Make proper div sections for this area - ie two columns left and right-->
   <h1 id = "Donate_Now_Text"> Donate Now </h1>
-  <img class ="Donation_Inspiration" src = "Donation_Benefits.png"> 
-  <h2> Select your donation amount: </h2>
 
   <div class = "Donation_Option"> 
     <select>
@@ -195,6 +193,7 @@
 
   <div class = "Center_Line"> </div> 
   <div class = "Donation_Amount">
+    <h2 class = "Select_Donate_Text" > Select your donation amount: </h2>
     <button class = "btn btn-top"> $25 </button> 
     <button class = "btn btn-middle"> $50 </button> 
     <button class = "btn btn-bottom"> $100 </button>
