Alignment of elements and image

--- a/proposal.html
+++ b/proposal.html
@@ -175,7 +175,6 @@
   </div>
 
 
-
   <div id = "Donate_Now"> - <!--Make proper div sections for this area - ie two columns left and right-->
   <h1 id = "Donate_Now_Text"> Donate Now </h1>
 
@@ -191,6 +190,10 @@
     <span class = "custom-arrow"> </span> 
   </div> 
 
+  <div class = "Donation_Image_Carousel">
+    <img class ="Donation_Benefits" src = "Donation_Benefits.png"> 
+  </div>
+
   <div class = "Center_Line"> </div> 
   <div class = "Donation_Amount">
     <h2 class = "Select_Donate_Text" > Select your donation amount: </h2>
@@ -199,6 +202,7 @@
     <button class = "btn btn-bottom"> $100 </button>
     <button class = "btn-btn-continue"> Continue </button>  
   </div>
+
 
 
 
