Linked button to other HTML donate page

--- a/proposal.html
+++ b/proposal.html
@@ -186,23 +186,27 @@
       <option value =""> Health</option>
       </option>
     </select>
+    
 
     <span class = "custom-arrow"> </span> 
   </div> 
+
+  <div class = "Center_Line"> 
+  </div>
 
   <div class = "Donation_Image_Carousel">
     <img class ="Donation_Benefits" src = "Donation_Benefits.png"> 
   </div>
 
-  <div class = "Center_Line"> </div> 
   <div class = "Donation_Amount">
     <h2 class = "Select_Donate_Text" > Select your donation amount: </h2>
     <button class = "btn btn-top"> $25 </button> 
     <button class = "btn btn-middle"> $50 </button> 
     <button class = "btn btn-bottom"> $100 </button>
+    <a href = "Donate.html">
     <button class = "btn-btn-continue"> Continue </button>  
+    </a>
   </div>
-
 
 
 
