Added css animations and working towards other donation page on donate.html

--- a/proposal.html
+++ b/proposal.html
@@ -204,7 +204,7 @@
     <button class = "btn btn-middle"> $50 </button> 
     <button class = "btn btn-bottom"> $100 </button>
     <a href = "Donate.html">
-    <button class = "btn-btn-continue"> Continue </button>  
+    <button class = "btn-btn-continue"> <span> Continue </span> </button>  <!--Span used to mark up element of text inside button-->
     </a>
   </div>
 
@@ -213,6 +213,4 @@
 
 	<!-- MAIN CONTENT: Add your own sections as needed -->
 </body>
-
-
 </html>
