--- a/Donate.html
+++ b/Donate.html
@@ -7,7 +7,7 @@
   <link rel ="shortcut icon" type = "image/png" href = "favicon.png">
   <!--Favicon icon -->
     
-	<link href="proposalCSS.css" rel="stylesheet" type="text/css" />
+	<link href="DonateCSS.css" rel="stylesheet" type="text/css" />
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet"> 
   <!--Montserrat font added to make stylistic font/text look nice -->
@@ -32,35 +32,7 @@
 
   <div id = "Donate_Now"> - <!--Make proper div sections for this area - ie two columns left and right-->
   <h1 id = "Donate_Now_Text"> Donate Now </h1>
+  <h2 id = "Personal_Details_Text"> Fill in your personal details to donate: </h2> 
 
-  <div class = "Donation_Option"> 
-    <select>
-      <option value =""> General </option>
-      <option value =""> Water </option>
-      <option value =""> Food </option>
-      <option value =""> Health</option>
-      </option>
-    </select>
-    
-
-    <span class = "custom-arrow"> </span> 
-  </div> 
-
-  <div class = "Center_Line"> 
-  </div>
-
-  <div class = "Donation_Image_Carousel">
-    <img class ="Donation_Benefits" src = "Donation_Benefits.png"> 
-  </div>
-
-  <div class = "Donation_Amount">
-    <h2 class = "Select_Donate_Text" > Select your donation amount: </h2>
-    <button class = "btn btn-top"> $25 </button> 
-    <button class = "btn btn-middle"> $50 </button> 
-    <button class = "btn btn-bottom"> $100 </button>
-    <a href = "Donate.html">
-    <button class = "btn-btn-continue"> <span> Continue </span> </button>  <!--Span used to mark up element of text inside button-->
-    </a>
-  </div>
 </body>
 </html>
