Finalised website - however need to add simple animation to nav bar

--- a/proposal.html
+++ b/proposal.html
@@ -10,6 +10,7 @@
 	<link href="proposalCSS.css" rel="stylesheet" type="text/css" />
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet"> 
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> <!-- use of font-awesome ONLY for Social Media icons which were added to footer section detailing simple contact details for World Vision --> 
   
 </head>
 
@@ -176,6 +177,7 @@
 
 
   <div id = "Donate_Now"> - <!--Make proper div sections for this area - ie two columns left and right-->
+  
   <h1 id = "Donate_Now_Text"> Donate Now </h1>
 
   <div class = "Donation_Option"> 
@@ -208,8 +210,14 @@
     </a>
   </div>
 
+<div class="footer">
+  <a href="https://www.facebook.com/WorldVisionAustralia" class="fa fa-facebook"></a>
+  <a href="https://twitter.com/worldvisionaus?lang=en" class="fa fa-twitter"></a>
+  <a href="https://www.instagram.com/worldvisionaus/?hl=en" class="fa fa-instagram"></a>
 
+  <p>Contact us by calling <b> 13 32 40 </b> within Australia or <b> +61 3 9940 5501 </b> from overseas or follow us on social media! </p>
 
+</div>
 
 	<!-- MAIN CONTENT: Add your own sections as needed -->
 </body>
