Some changes to documentation

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
 	<header>
-		<h1>World Vision - Website Proposal</h1>
+		<h1>World Vision - Website Proposal </h1>
 	</header>
 
 	<!-- NAVIGATION: Add your own list item links based on secion IDs and heading elements -->
@@ -42,10 +42,11 @@
 	<!-- MAIN CONTENT: Add your own sections as needed -->
 	<main>
 		<section id="background">
+      <h2>Web Proposal/Prototype Link </h2>
+      <h3> <a href = "proposal.html"> Proposal Link </a> </h3>
+      </br>
 			<h2>Reflection on Proposal</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione eveniet cupiditate cumque autem, ad dolores a iure cum ipsa. Facere dolorum dolor exercitationem quae recusandae quam expedita fugit est error! </h3>
-      <h2> Link to proposal link </h2>
-      <a href = "proposal.html"> Proposal Link </a>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione eveniet cupiditate cumque autem, ad dolores a iure cum ipsa. Facere dolorum dolor exercitationem quae recusandae quam expedita fugit est error! </p>
     </section>
 	</main>
 
