Documentation Headings and Layout

--- a/index.html
+++ b/index.html
@@ -45,8 +45,40 @@
       <h2>Web Proposal/Prototype Link </h2>
       <h3> <a href = "proposal.html"> Proposal Link </a> </h3>
       </br>
-			<h2>Reflection on Proposal</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione eveniet cupiditate cumque autem, ad dolores a iure cum ipsa. Facere dolorum dolor exercitationem quae recusandae quam expedita fugit est error! </p>
+			<h2>Design Changes and Iteration</h2>
+      <p>The proper changes of my web iterations were done in accordance to the need for only 5 pages (in accordance to the marking criteria) and hence the reduction from 7 pages to 5 pages were done, alongside considerations of mobile device resolution (to which whilst were considered and designed nicely, had not been properly addressed in the final prototype/design as discussed more in the self-reflection/conclusion stage of this documentation). Below demonstrates the image comparisons from 7 pages to 5 pages alongside proper explanation behind it </p>
+      </br> 
+
+      <h2>Web Proposal Code Sequence</h2>
+      <p>The proper changes of my web iterations were done in accordance to the need for only 5 pages (in accordance to the marking criteria) and hence the reduction from 7 pages to 5 pages were done, alongside considerations of mobile device resolution (to which whilst were considered and designed nicely, had not been properly addressed in the final prototype/design as discussed more in the self-reflection/conclusion stage of this documentation). Below demonstrates the image comparisons from 7 pages to 5 pages alongside proper explanation behind it </p>
+      </br>
+
+      <h2>Home Page Process </h2>
+      <p>The proper changes of my web iterations were done in accordance to the need for only 5 pages (in accordance to the marking criteria) and hence the reduction from 7 pages to 5 pages were done, alongside considerations of mobile device resolution (to which whilst were considered and designed nicely, had not been properly addressed in the final prototype/design as discussed more in the self-reflection/conclusion stage of this documentation). Below demonstrates the image comparisons from 7 pages to 5 pages alongside proper explanation behind it </p>
+
+      <h2> Mobile Consideration for Home Page </h2> 
+      <p> The proper changes of my web iterations were done in accordance to the need for only 5 pages (in accordance to the marking criteria) and hence the reduction from 7 pages to 5 pages were done, alongside considerations of mobile device resolution (to which whilst were considered and designed nicely, had not been properly addressed in the final prototype/design as discussed more in the self-reflection/conclusion stage of this documentation). Below demonstrates the image comparisons from 7 pages to 5 pages alongside proper explanation behind it </p>
+
+      <h2> Flex Grid Process for Our Impact and Your Impact </h2> 
+      <p> The proper changes of my web iterations were done in accordance to the need for only 5 pages (in accordance to the marking criteria) and hence the reduction from 7 pages to 5 pages were done, alongside considerations of mobile device resolution (to which whilst were considered and designed nicely, had not been properly addressed in the final prototype/design as discussed more in the self-reflection/conclusion stage of this documentation). Below demonstrates the image comparisons from 7 pages to 5 pages alongside proper explanation behind it </p>
+
+      <h2> Donation Pages </h2> 
+      <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Recusandae sapiente nostrum autem eligendi error explicabo inventore accusamus. Earum qui ullam, quibusdam, nemo nihil cumque excepturi dolor necessitatibus id impedit numquam. </p>
+
+      <h2> Additional Changes and Additions </h2> 
+      <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Recusandae sapiente nostrum autem eligendi error explicabo inventore accusamus. Earum qui ullam, quibusdam, nemo nihil cumque excepturi dolor necessitatibus id impedit numquam. </p>
+  
+      <h2> Changes based on User Feedback and Support </h2> 
+      <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Recusandae sapiente nostrum autem eligendi error explicabo inventore accusamus. Earum qui ullam, quibusdam, nemo nihil cumque excepturi dolor necessitatibus id impedit numquam. </p>
+
+      <h2> Self-Reflection and Considerations </h2> 
+      <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Recusandae sapiente nostrum autem eligendi error explicabo inventore accusamus. Earum qui ullam, quibusdam, nemo nihil cumque excepturi dolor necessitatibus id impedit numquam. </p>
+
+      <h2> References </h2> 
+      <p> </p>
+      <p> References for: favicon, World Vision logo, water images, your impact images and background image </p>
+
+
     </section>
 	</main>
 
