Design Changes and Iteraction documentation section done

--- a/index.html
+++ b/index.html
@@ -11,8 +11,6 @@
 	<header>
 		<h1>World Vision - Website Proposal </h1>
 	</header>
-
-	<!-- NAVIGATION: Add your own list item links based on secion IDs and heading elements -->
 	<nav>
 		  <ul>
         <li><a href = "#Design_Changes"> Design Changes And Iteration </a> </li>
@@ -35,8 +33,25 @@
       <h3> <a href = "proposal.html"> Proposal Link </a> </h3>
       </br>
 			<h2 id = "Design_Changes">Design Changes and Iteration</h2>
-      <p>The proper changes of my web iterations were done in accordance to the need for only 5 pages (in accordance to the marking criteria) and hence the reduction from 7 pages to 5 pages were done, alongside considerations of mobile device resolution (to which whilst were considered and designed nicely, had not been properly addressed in the final prototype/design as discussed more in the self-reflection/conclusion stage of this documentation). Below demonstrates the image comparisons from 7 pages to 5 pages alongside proper explanation behind it </p>
+      <h3> From 8 pages to 5 pages:</h3>
+      <p>The proper changes of my web iterations were done in accordance to the need for only 5 pages (in accordance to the marking criteria) and hence the reduction from 8 pages to 5 pages were done, alongside considerations of mobile device resolution (to which whilst were considered and designed nicely, had not been properly addressed in the final prototype/design as discussed more in the self-reflection/conclusion stage of this documentation). </p>
+        
+      <p> The format of doing it as a 'single page' approach also provided for easier and simplistic navigation - combining what could've been multiple pages into 1 long scrolling page allowing for once again, simple easy and aesthethic design. Whilst this also counted as one page (when I had originally perceived it as each scrolling page being a page) there was also an additional page in the donation section - whereby the link to a seperate donation form helped people can focus on the goal of donating - being likely to follow the call to action to donate as a result. Below demonstrates the image comparisons from 8 pages to 5 pages. </p>
+      </br>
+      <h4> 8 pages (top image) to 5 pages (bottom image): </h4> 
+      <img src = "8_pages.png" alt = "Sitemap2" style = "width: 100%">
+      <img src = "5_pages.png" alt = "Sitemap2" style = "width: 100%">
+
+      <blockquote>
+      <figcaption> NOTE: Whilst I had perceived it as being 5 pages (as as a result of me perceiving each scrolling page to be a page) - there were technically only 2 pages - 1 being the long-scrolling page and also the other donation form page - still following the assessment criteria accordingly however! </figcaption>
+      </blockquote>
       </br> 
+      <h3> Mobile Considerations </h3> 
+      <p> When it came to mobile ratios/resolutions - proper refined mockups for it were also done following the creation of the 5 pages, in order to visually see and organise the content in an according manner for it. Whilst these considerations were useful and helpful towards the proceeding coding stages, it was however not done properly - further discussed in my <b> self-reflection stage </b> at the end, whereby in simple terms, it was a result of me not doing perhaps a mobile format first and then website (or the website code not being functional enough for other formats alongside time constraints). Below is an image of the mobile mockups being done in a neat and organised manner (with text being aligned appropriately and also the menu being changed to a hamburger menu upon decreasing width size) </p>
+      </br> 
+      <h4> Mobile Format </h4> 
+      <img src = "Mobile Format.png" alt = "Sitemap2" style = "width: 100%">
+      </br>
 
       <h2 id = "Code_Sequence">Web Proposal Code Sequence</h2>
       <p>The proper changes of my web iterations were done in accordance to the need for only 5 pages (in accordance to the marking criteria) and hence the reduction from 7 pages to 5 pages were done, alongside considerations of mobile device resolution (to which whilst were considered and designed nicely, had not been properly addressed in the final prototype/design as discussed more in the self-reflection/conclusion stage of this documentation). Below demonstrates the image comparisons from 7 pages to 5 pages alongside proper explanation behind it </p>
@@ -57,7 +72,7 @@
       <h2 id = "Additional_Changes"> Additional Changes and Additions </h2> 
       <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Recusandae sapiente nostrum autem eligendi error explicabo inventore accusamus. Earum qui ullam, quibusdam, nemo nihil cumque excepturi dolor necessitatibus id impedit numquam. </p>
 
-      <h2 id = "#Design_Changes"> Self-Reflection and Considerations </h2> 
+      <h2 id = "Self_Reflection"> Self-Reflection and Considerations </h2> 
       <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Recusandae sapiente nostrum autem eligendi error explicabo inventore accusamus. Earum qui ullam, quibusdam, nemo nihil cumque excepturi dolor necessitatibus id impedit numquam. </p>
 
       <h2 id = "References"> References </h2> 
@@ -76,6 +91,8 @@
       <p> Font Awesome (2020). Retrieved 27 November 2020, from https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css  </p>
 
       <p> Google Fonts, (2020). Montserrat. Retrieved 27 November 2020, from https://fonts.google.com/specimen/Montserrat?query=Mon&sidebar.open=true&selection.family=Montserrat </p>
+
+      <!--Add additional references as well - e.g. for user icons, extra images from 8 pages e.g. Your Impact cont. etc (mockup design images) --> 
 
 
 
