Mobile Consideration for Home Page documentation done

--- a/index.html
+++ b/index.html
@@ -93,11 +93,19 @@
 
       <section>
         <h3 id = "Mobile"> Mobile Consideration for Home Page </h2> 
-        <p> The proper changes of my web iterations were done in accordance to the need for only 5 pages (in accordance to the marking criteria) and hence the reduction from 7 pages to 5 pages were done, alongside considerations of mobile device resolution (to which whilst were considered and designed nicely, had not been properly addressed in the final prototype/design as discussed more in the self-reflection/conclusion stage of this documentation). Below demonstrates the image comparisons from 7 pages to 5 pages alongside proper explanation behind it </p>
+        <p> The mobile consideration/mockup done was also accordingly done for the Home Page in a relatively good manner, responding well as the width dimensions close in as well as being responsive to mobile devices. This however was not apparent following the addition to other pages - and the issues with properly doing responsive design for them (as shown in the self-reflection stage once again). The use of media queries and also em measurements (responsive units) within these queries paired up with the addition of the hamburger menu allowed for the following sequence of images as shown further below, alongside the media querie code showing further details of the considerations towards responsive design. </p>
+        <h4> Mobile Consideration </h4> 
+         <img src = "Responsive Test.png" alt = "Sitemap2" style = "width: 100%">
+        <h4> Media Queries Code </h4> 
+         <img src = "Media Queries.png" alt = "Sitemap2" style = "width: 100%">
+        <blockquote>
+          <figcaption> Note: The use of toggle:checked + .menu was used as a way to properly show the menu/navigation bar after the user clicks on the hamburger menu on screen. The hamburger menu dropdown should've also been better (ie the menu alignment should've been better and it should've been within an inline block element to which is something that should be addressed in the future once again</figcaption>
+        </blockquote>
+        
       </section>
 
       <section>
-        <h3 id = "Flex_Box"> Flex Box Process for Our Impact and Your Impact </h2> 
+        <h3 id = "Flex_Box"> Flex Box Process for Our Impact and Your Impact Pages</h2> 
         <p> The proper changes of my web iterations were done in accordance to the need for only 5 pages (in accordance to the marking criteria) and hence the reduction from 7 pages to 5 pages were done, alongside considerations of mobile device resolution (to which whilst were considered and designed nicely, had not been properly addressed in the final prototype/design as discussed more in the self-reflection/conclusion stage of this documentation). Below demonstrates the image comparisons from 7 pages to 5 pages alongside proper explanation behind it </p>
       </section>
 
